--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "my-app-basic",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://perseus0832.github.io/React-basic-api/",
   "dependencies": {
     "bootstrap": "^4.1.0",
+    "gh-pages": "^1.1.0",
     "material-ui": "^0.20.0",
     "material-ui-datetimepicker": "^1.0.7",
     "npm": "^5.8.0",
@@ -17,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
